--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">pagani auto 4k wallpapers</string>
-    <string name="bannerAd">5721640477874908_6736745546364391</string>
-    <string name="Interstitial_id">5721640477874908_6736746173030995</string>
-    <string name="Video_id">5721640477874908_6736746866364259</string>
-
+    <string name="bannerAd">ca-app-pub-7333148842517139/3301178691</string>
+    <string name="Interstitial_id">ca-app-pub-7333148842517139/1219647120</string>
+    <string name="Video_id">ca-app-pub-7333148842517139/9571336905</string>
+    <string name="app_id">ca-app-pub-7333148842517139~3329098856</string>
 
     <string name="n1">No Internet</string>
     <string name="n2">Check your Internet connection and try again</string>
@@ -28,4 +28,5 @@
     <string name="rewarded_dialog" translatable="true">this is a premium wallpaper.do you like to watch an ad to unlock it</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
